--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -709,6 +709,12 @@ $red1: rgb(235, 87, 87)
 				max-width: 100%
 				width: 55px
 
+.anchor
+	display: block
+	position: relative
+	top: -140px
+	visibility: hidden
+
 ////////////////////////////////////////
 //                                    //
 //            SINGLE ITEM             //
@@ -882,3 +888,16 @@ $red1: rgb(235, 87, 87)
 .error-page
 	padding-top: 180px
 	text-align: center
+
+//////////////////////////////////////
+//                                  //
+//              MODALS              //
+//                                  //
+//////////////////////////////////////
+
+.modal-content
+	border-radius: 0
+	.form-control
+		border: 1px solid $color1
+		border-radius: 0
+		
