--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -45,6 +45,7 @@ $red1: rgb(235, 87, 87)
 .grey-back
 	background-color: $color2
 	color: #383838
+
 //////////////////////////////////////
 //                                  //
 //              BUTTONS             //
@@ -709,11 +710,23 @@ $red1: rgb(235, 87, 87)
 				max-width: 100%
 				width: 55px
 
+//////////////////////////////////////
+//                                  //
+//             FIXES                //
+//                                  //
+//////////////////////////////////////
+
 .anchor
 	display: block
 	position: relative
 	top: -140px
 	visibility: hidden
+
+.top-space
+	height: 100px
+	
+.top-space-big
+	height: 150px
 
 ////////////////////////////////////////
 //                                    //
