--- a/resources/assets/sass/web/_webGeneral.sass
+++ b/resources/assets/sass/web/_webGeneral.sass
@@ -15,7 +15,7 @@ body
 	margin: 0
 	a
 		text-decoration: none
-		color: rgb(187, 183, 242)
+		color: $color3
 		&:hover
 			text-decoration: none
 
