--- a/resources/assets/sass/web/_webNav.sass
+++ b/resources/assets/sass/web/_webNav.sass
@@ -18,11 +18,12 @@
                     transform: translate(0, 5px)
                     cursor: pointer
 
-.navbar-default
-    height: 150px
-    background-color: transparent
-    border-bottom: 0
-    border: 0
+@media (min-width: 768px)
+    .navbar-default
+        height: 150px
+        background-color: transparent
+        border-bottom: 0
+        border: 0
 
 .nav-container
     min-height: 73px
