--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -727,6 +727,10 @@ $red1: rgb(235, 87, 87)
 	
 .top-space-big
 	height: 150px
+	
+@media (max-width: 991px)
+	.top-space-big
+		display: none
 
 ////////////////////////////////////////
 //                                    //
