--- a/public/css/web.css
+++ b/public/css/web.css
@@ -1840,6 +1840,7 @@ footer .copyright {
   font-size: 1rem;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding-bottom: 25px;
 }
 
 .blog-list .blog-item .inner .date {
@@ -1861,6 +1862,10 @@ footer .copyright {
 .blog-article {
   position: relative;
   margin-bottom: 150px;
+}
+
+.blog-article .inner {
+  margin-top: 20px;
 }
 
 .blog-article .image {
@@ -1887,7 +1892,7 @@ footer .copyright {
 .blog-article .date {
   position: absolute;
   right: 16px;
-  top: 0;
+  top: -15px;
 }
 
 @media (max-width: 991px) {
@@ -2004,6 +2009,10 @@ footer .copyright {
   .blog-filters-desktop {
     padding: 15px;
     background-color: rgba(249, 249, 249, 0.42);
+  }
+  .blog-filters-desktop span.badge {
+    padding: 2px 6px;
+    margin-top: -2px;
   }
 }
 
