--- a/resources/assets/sass/web/_elements.sass
+++ b/resources/assets/sass/web/_elements.sass
@@ -382,6 +382,10 @@ $red1: rgb(235, 87, 87)
 .small-section
 	padding: 50px 10px
 
+@media (max-width: 768px)
+	.small-section
+		padding: 50px 30px
+
 	//////// Heart Decoration Behind Home Slider ////////
 .topDecoration
 	background-image: url(../webimages/home/navback.png)
@@ -753,7 +757,7 @@ $red1: rgb(235, 87, 87)
 	
 @media (max-width: 991px)
 	.top-space-big
-		display: none
+		height: 50px
 
 ////////////////////////////////////////
 //                                    //
