--- a/public/css/vadmin.css
+++ b/public/css/vadmin.css
@@ -414,6 +414,17 @@ hr {
   line-height: 23px;
 }
 
+.show-item .custom-badge {
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin-top: 10px;
+}
+
+.show-item .muted {
+  color: #a7a6a6;
+  font-size: 0.9rem;
+}
+
 .search-filters {
   position: relative;
   background-color: #fff;
