--- a/resources/assets/sass/vadmin/_colorsAndFonts.sass
+++ b/resources/assets/sass/vadmin/_colorsAndFonts.sass
@@ -21,16 +21,17 @@ $fontnavstyle: italic
 //                                  //
 //////////////////////////////////////
 
-$orange:  #dc9f1d
-$orangeH: #ceaa5f
-$greenD:  #8DBB61
-$greenL:  #9FD56B
-$green:   #8DBB61
-$greenH:  #9FD56B
-$blue:    #5D76C9
-$blueH:   #7689C8
-$red:     #D05C5C
-$redH:    #C47777
+$orange:      #dc9f1d
+$orangeH:     #ceaa5f
+$greenD:      #8DBB61
+$greenL:      #9FD56B
+$green:       #8DBB61
+$greenH:      #9FD56B
+$blue:        #5D76C9
+$blueH:       #7689C8
+$red:         #D05C5C
+$redH:        #C47777
+$color-muted: #a7a6a6
 
 $light: #F2F2F2
 $dark:  #212129
