--- a/resources/assets/sass/vadmin/_vadminElements.sass
+++ b/resources/assets/sass/vadmin/_vadminElements.sass
@@ -151,6 +151,15 @@
 		font-size: 1.1rem
 		font-weight: 300
 		line-height: 23px
+
+.show-item
+	.custom-badge
+		font-size: 1.1rem
+		font-weight: 400
+		margin-top: 10px
+	.muted
+		color: $color-muted
+		font-size: 0.9rem
 //////////////////////////////////////
 //                                  //
 //            SEARCH                //
