--- a/resources/assets/sass/web/_blog.sass
+++ b/resources/assets/sass/web/_blog.sass
@@ -62,6 +62,12 @@
         right: 16px
         top: -15px
 
+@media (max-width: 1200px)
+    .blog-article
+        p
+        .search
+            padding: 5px
+
 @media (max-width: 991px)
     .blog-list 
         h1
@@ -94,6 +100,14 @@
                     width: 768px
                     max-width: 100%
 
+@media (max-width: 1200px) and (min-width: 580px)
+    .blog-article .inner 
+        p
+            min-height: 390px
+        .search
+            right: 20px
+
+
 @media (max-width: 768px) and (min-width: 330px)
     .blog-list 
         .blog-item
@@ -102,6 +116,21 @@
                 overflow: hidden
                 img
                     max-width: 100%
+
+@media (max-width: 580px)
+    .blog-article
+        .inner
+            h2
+            .image
+                float: none
+                margin: 0
+                margin-bottom: 20px
+                margin-top: 20px
+                img
+                    width: 70%
+            .search 
+                bottom: -20px
+                left: 10px
 
 @media (max-width: 500px)
     .blog-list 
