--- a/resources/assets/sass/web/_webNav.sass
+++ b/resources/assets/sass/web/_webNav.sass
@@ -18,12 +18,6 @@
                     transform: translate(0, 5px)
                     cursor: pointer
 
-@media (min-width: 768px)
-    .navbar-default
-        height: 150px
-        background-color: transparent
-        border-bottom: 0
-        border: 0
 
 .nav-container
     min-height: 73px
@@ -33,6 +27,7 @@
     background-color: $color1
 
 .navbar-default
+    border: 0
     .navbar-nav>li>a
         color: #fff
         font-weight: 400
@@ -41,6 +36,10 @@
         &:hover,&:active,&:focus
             border-bottom: 1px solid $color3
             color: $color3
+
+@media (max-width: 768px)
+    .navbar-default .navbar-nav>li>a
+        font-size: 1.5rem
 
 .navbar-default .navbar-toggle
     border-radius: 0
@@ -54,15 +53,30 @@
     display: none
 
 
-.navbar-default .navbar-nav>.active>a, 
-    background-color: transparent
-    border-bottom: 1px solid $color3
-    color: $color3
-    &:focus,&:hover,&:active
-        background-color: transparent
-        border-bottom: 1px solid $color2
-        color: $color2
+@media (max-width: 768px)
+    .navbar-default 
+        .navbar-nav>.active>a
+            background-color: transparent
+            border-bottom: 0
+            color: $color3
+            &:focus,&:hover,&:active
+                background-color: transparent
+                border: 0px
 
+@media (min-width: 768px)
+    .navbar-default
+        height: 150px
+        background-color: transparent
+        border-bottom: 0
+        border: 0
+        .navbar-nav>.active>a
+            background-color: transparent
+            border-bottom: 1px solid $color3
+            color: $color3
+            &:focus,&:hover,&:active
+                background-color: transparent
+                border-bottom: 1px solid $color2
+                color: $color2
 
 @media (max-width: 768px)
     .navbar-default .navbar-nav>li>a 
@@ -85,6 +99,10 @@
 
 .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse
     max-height: 480px
+
+@media (max-width: 768px)
+    .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse
+        min-height: 100vh
 
 .navbar-brand
     padding: 5px
